--- a/index.html
+++ b/index.html
@@ -1,143 +1,151 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mon CV</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AZAG Mayden - CV</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
+    <style>
+        body {
+            font-family: 'Press Start 2P', cursive;
+            overflow: hidden;
+        }
 
-    .section {
-      margin-bottom: 20px;
-    }
+        .home {
+            background: url('https://example.com/video-game-background.jpg') no-repeat center center fixed;
+            background-size: cover;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: black;
+            text-align: center;
+            animation: fadeIn 1s;
+        }
 
-    .section h2 {
-      background-color: #007bff;
-      color: white;
-      padding: 10px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
 
-    .section-content {
-      display: none;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      background-color: #f9f9f9;
-    }
-  </style>
+        @keyframes fadeOut {
+            from { opacity: 1; }
+            to { opacity: 0; }
+        }
+
+        .btn-launch {
+            background-color: #FFCC00;
+            color: #000;
+            font-size: 24px;
+            padding: 20px 40px;
+            border: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+            cursor: pointer;
+        }
+
+        .btn-launch:hover {
+            background-color: #FFAA00;
+        }
+
+        .cv {
+            display: none;
+            background-color: #f0f0f0;
+            color: #333;
+            padding: 20px;
+            opacity: 0;
+            transition: opacity 0.5s;
+            height: 100vh;
+            overflow-y: auto;
+        }
+
+        .navbar {
+            background-color: #343a40;
+        }
+
+        .navbar-nav .nav-link {
+            color: #ffffff;
+        }
+
+        .header {
+            background-color: #007BFF;
+            color: white;
+            padding: 40px 0;
+            text-align: center;
+            margin-bottom: 20px;
+            border-radius: 0 0 10px 10px;
+        }
+
+        .section {
+            background-color: white;
+            border-radius: 10px;
+            padding: 20px;
+            margin: 10px 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            color: #007BFF;
+        }
+
+        footer {
+            text-align: center;
+            margin: 20px 0;
+            color: #aaaaaa;
+        }
+    </style>
 </head>
 <body>
-  <div class="section" data-category="experience">
-    <h2>Expérience</h2>
-    <div class="section-content" id="experience-details">
-      <!-- Les détails apparaîtront ici -->
+    <!-- Page d'accueil -->
+    <div class="home" id="home">
+        <h1>Bienvenue dans l'univers d'AZAG Mayden</h1>
+        <p>Appuyez sur le bouton pour accéder à votre CV !</p>
+        <button class="btn-launch" id="launchBtn">Lancer</button>
     </div>
-  </div>
 
-  <div class="section" data-category="competence">
-    <h2>Compétences Professionnelles</h2>
-    <div class="section-content" id="competence-details">
-      <!-- Les détails apparaîtront ici -->
+    <!-- Section CV -->
+    <div id="cv" class="cv">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand mx-auto" href="#">AZAG Mayden</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="#experience">Expérience</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#competences">Compétences</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#diplomes">Diplômes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#qualites">Qualités</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#langues">Langues</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+        
+        <div class="header">
+            <h1>AZAG Mayden</h1>
+            <h3>Étudiant en alternance en cybersécurité informatique et réseaux</h3>
+            <p>(Rythme : 1 semaine école / 1 semaine entreprise)</p>
+        </div>
+
+        <!-- Votre contenu pour le CV ici -->
     </div>
-  </div>
 
-  <div class="section" data-category="diplomes">
-    <h2>Diplômes</h2>
-    <div class="section-content" id="diplomes-details">
-      <!-- Les détails apparaîtront ici -->
-    </div>
-  </div>
+    <script>
+        document.getElementById('launchBtn').addEventListener('click', function() {
+            const home = document.getElementById('home');
+            const cv = document.getElementById('cv');
 
-  <div class="section" data-category="qualites">
-    <h2>Qualités</h2>
-    <div class="section-content" id="qualites-details">
-      <!-- Les détails apparaîtront ici -->
-    </div>
-  </div>
-
-  <div class="section" data-category="langue">
-    <h2>Langues</h2>
-    <div class="section-content" id="langue-details">
-      <!-- Les détails apparaîtront ici -->
-    </div>
-  </div>
-
-  <div class="section" data-category="informations">
-    <h2>Informations Personnelles</h2>
-    <div class="section-content" id="informations-details">
-      <!-- Les détails apparaîtront ici -->
-    </div>
-  </div>
-
-  <script>
-    const data = {
-      experience: `
-        <p><strong>Programmation informatique</strong> (Archivage et stockage de fichier) 2022-2023 :</p>
-        <ul>
-          <li>Étude du besoin</li>
-          <li>Mise en place d’une solution technique permettant de déplacer des fichiers sources vers une destination cible avec modification du format</li>
-          <li>Gestion de l’archivage des fichiers (Python)</li>
-        </ul>
-        <p><strong>Projet informatique</strong> (Serre automatique) 2022-2023 :</p>
-        <ul>
-          <li>Création d’une serre automatique : Étude du besoin et mise en place technique de la solution (Arduino, Python)</li>
-        </ul>
-        <p><strong>Création Site Web</strong> 2021-2022 :</p>
-        <ul>
-          <li>Découverte de HTML / CSS pour une création de site internet.</li>
-        </ul>
-      `,
-      competence: `
-        <ul>
-          <li><strong>Montage vidéo (Pro)</strong> : Adobe Premier Pro, Adobe After Effect</li>
-        </ul>
-      `,
-      diplomes: `
-        <p><strong>Lycée Etienne Mimard</strong></p>
-        <ul>
-          <li>Baccalauréat Général Scientifique (Mathématique - Science de l’ingénieur) 2022-2023</li>
-        </ul>
-      `,
-      qualites: `
-        <ul>
-          <li>Esprit d'équipe</li>
-          <li>Rigueur</li>
-          <li>Dynamisme</li>
-          <li>Assiduité</li>
-        </ul>
-      `,
-      langue: `
-        <ul>
-          <li>Français</li>
-          <li>Anglais (B2)</li>
-        </ul>
-      `,
-      informations: `
-        <ul>
-          <li>Numéro tel : 12.34.56.78</li>
-          <li>Âge : 19 ans</li>
-          <li>Mail : maydenazag@gmail.com</li>
-          <li>Adresse : 4 rue des balivernes</li>
-        </ul>
-      `
-    };
-
-    const sections = document.querySelectorAll('.section');
-
-    sections.forEach(section => {
-      const category = section.dataset.category;
-      const contentDiv = section.querySelector('.section-content');
-
-      section.querySelector('h2').addEventListener('click', () => {
-        contentDiv.innerHTML = data[category];
-        contentDiv.style.display = contentDiv.style.display === 'block' ? 'none' : 'block';
-      });
-    });
-  </script>
+            home.style.animation = 'fadeOut 0.5s forwards';
+            setTimeout(() => {
+                home.style.display = 'none';
+                cv.style.display = 'block';
+                cv.style.opacity = '1';
+            }, 500);
+        });
+    </script>
 </body>
 </html>
