--- a/index.html
+++ b/index.html
@@ -5,146 +5,123 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AZAG Mayden - CV</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
     <style>
         body {
-            font-family: 'Press Start 2P', cursive;
-            overflow: hidden;
+            font-family: Arial, sans-serif;
         }
 
-        .home {
-            background: url('https://example.com/video-game-background.jpg') no-repeat center center fixed;
-            background-size: cover;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            color: black;
-            text-align: center;
-            animation: fadeIn 1s;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        @keyframes fadeOut {
-            from { opacity: 1; }
-            to { opacity: 0; }
-        }
-
-        .btn-launch {
-            background-color: #FFCC00;
-            color: #000;
-            font-size: 24px;
-            padding: 20px 40px;
-            border: none;
+        .case {
+            width: 100%;
+            background-color: #007BFF;
+            color: white;
+            padding: 10px 15px;
+            margin: 10px 0;
             border-radius: 5px;
-            transition: background-color 0.3s;
             cursor: pointer;
+            text-align: center;
         }
 
-        .btn-launch:hover {
-            background-color: #FFAA00;
+        .case:hover {
+            background-color: #0056b3;
         }
 
-        .cv {
+        .details {
             display: none;
-            background-color: #f0f0f0;
-            color: #333;
-            padding: 20px;
-            opacity: 0;
-            transition: opacity 0.5s;
-            height: 100vh;
-            overflow-y: auto;
-        }
-
-        .navbar {
-            background-color: #343a40;
-        }
-
-        .navbar-nav .nav-link {
-            color: #ffffff;
+            padding: 15px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            margin-top: 10px;
+            background-color: #f9f9f9;
         }
 
         .header {
-            background-color: #007BFF;
-            color: white;
-            padding: 40px 0;
             text-align: center;
             margin-bottom: 20px;
-            border-radius: 0 0 10px 10px;
-        }
-
-        .section {
-            background-color: white;
-            border-radius: 10px;
-            padding: 20px;
-            margin: 10px 0;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        h2 {
-            color: #007BFF;
-        }
-
-        footer {
-            text-align: center;
-            margin: 20px 0;
-            color: #aaaaaa;
         }
     </style>
 </head>
 <body>
-    <!-- Page d'accueil -->
-    <div class="home" id="home">
-        <h1>Bienvenue dans l'univers d'AZAG Mayden</h1>
-        <p>Appuyez sur le bouton pour accéder à votre CV !</p>
-        <button class="btn-launch" id="launchBtn">Lancer</button>
-    </div>
-
-    <!-- Section CV -->
-    <div id="cv" class="cv">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand mx-auto" href="#">AZAG Mayden</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#experience">Expérience</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#competences">Compétences</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#diplomes">Diplômes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#qualites">Qualités</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#langues">Langues</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-        
+    <div class="container mt-5">
         <div class="header">
             <h1>AZAG Mayden</h1>
-            <h3>Étudiant en alternance en cybersécurité informatique et réseaux</h3>
-            <p>(Rythme : 1 semaine école / 1 semaine entreprise)</p>
+            <h3>Étudiant en alternance en cybersécurité</h3>
         </div>
 
-        <!-- Votre contenu pour le CV ici -->
+        <!-- Cases pour le CV -->
+        <div class="case" data-category="experience">Expérience</div>
+        <div class="details" id="experience-details">
+            <p><strong>Programmation informatique</strong> (Archivage et stockage de fichier) 2022-2023 :</p>
+            <ul>
+                <li>Étude du besoin</li>
+                <li>Mise en place d’une solution technique permettant de déplacer des fichiers sources vers une destination cible avec modification du format</li>
+                <li>Gestion de l’archivage des fichiers (Python)</li>
+            </ul>
+            <p><strong>Projet informatique</strong> (Serre automatique) 2022-2023 :</p>
+            <ul>
+                <li>Création d’une serre automatique : Étude du besoin et mise en place technique de la solution (Arduino, Python)</li>
+            </ul>
+            <p><strong>Création Site Web</strong> 2021-2022 :</p>
+            <ul>
+                <li>Découverte de HTML / CSS pour une création de site internet.</li>
+            </ul>
+        </div>
+
+        <div class="case" data-category="competence">Compétences Professionnelles</div>
+        <div class="details" id="competence-details">
+            <ul>
+                <li><strong>Montage vidéo (Pro)</strong> : Adobe Premier Pro, Adobe After Effect</li>
+            </ul>
+        </div>
+
+        <div class="case" data-category="diplomes">Diplômes</div>
+        <div class="details" id="diplomes-details">
+            <p><strong>Lycée Etienne Mimard</strong></p>
+            <ul>
+                <li>Baccalauréat Général Scientifique (Mathématique - Science de l’ingénieur) 2022-2023</li>
+            </ul>
+        </div>
+
+        <div class="case" data-category="qualites">Qualités</div>
+        <div class="details" id="qualites-details">
+            <ul>
+                <li>Esprit d'équipe</li>
+                <li>Rigueur</li>
+                <li>Dynamisme</li>
+                <li>Assiduité</li>
+            </ul>
+        </div>
+
+        <div class="case" data-category="langues">Langues</div>
+        <div class="details" id="langues-details">
+            <ul>
+                <li>Français</li>
+                <li>Anglais (B2)</li>
+            </ul>
+        </div>
+
+        <div class="case" data-category="contact">Informations Personnelles</div>
+        <div class="details" id="contact-details">
+            <ul>
+                <li>Numéro tel : 12.34.56.78</li>
+                <li>Âge : 19 ans</li>
+                <li>Mail : maydenazag@gmail.com</li>
+                <li>Adresse : 4 rue des balivernes</li>
+            </ul>
+        </div>
     </div>
 
     <script>
-        document.getElementById('launchBtn').addEventListener('click', function() {
-            const home = document.getElementById('home');
-            const cv = document.getElementById('cv');
+        // Ajouter un gestionnaire d'événements pour chaque case
+        document.querySelectorAll('.case').forEach(caseElement => {
+            caseElement.addEventListener('click', function() {
+                const category = this.dataset.category;
+                const detailsElement = document.getElementById(`${category}-details`);
 
-            home.style.animation = 'fadeOut 0.5s forwards';
-            setTimeout(() => {
-                home.style.display = 'none';
-                cv.style.display = 'block';
-                cv.style.opacity = '1';
-            }, 500);
+                // Afficher ou masquer les détails
+                const isVisible = detailsElement.style.display === 'block';
+                document.querySelectorAll('.details').forEach(el => el.style.display = 'none');
+                detailsElement.style.display = isVisible ? 'none' : 'block';
+            });
         });
     </script>
 </body>
